error_v5.log
    Checking uci v0.1.0 (C:\Users\denil\Desktop\uci)
error[E0597]: `patient.uci_admission_date` does not live long enough
  --> src\frontend\patient_list.rs:78:72
   |
42 |   ...   children=move |patient| {
   |                        ------- binding `patient` declared here
...
50 | / ...       view! {
51 | | ...           <div class="bg-white rounded-2xl shadow-sm border border-gray-100 hover:shadow-xl transition-all duration-300 pb-2">
52 | | ...               <div class="p-6 pb-4">
53 | | ...                   <div class="flex justify-between items-start mb-4">
...  |
78 | | ...                           <span class="font-medium">{patient.uci_admission_date.split('T').next().unwrap_or("")}</span>
   | |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
...  |
93 | | ...           </div>
94 | | ...       }
   | |___________- argument requires that `patient.uci_admission_date` is borrowed for `'static`
95 |   ...   }
   |         - `patient.uci_admission_date` dropped here while still borrowed

error[E0716]: temporary value dropped while borrowed
  --> src\frontend\patient_list.rs:90:51
   |
50 | / ...       view! {
51 | | ...           <div class="bg-white rounded-2xl shadow-sm border border-gray-100 hover:shadow-xl transition-all duration-300 pb-2">
52 | | ...               <div class="p-6 pb-4">
53 | | ...                   <div class="flex justify-between items-start mb-4">
...  |
90 | | ...                   <span>"ID: " {id.clone().to_string().split(':').last().unwrap_or("?")}</span>
   | |                                     ^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...  |
93 | | ...           </div>
94 | | ...       }
   | |___________- argument requires that borrow lasts for `'static`
95 |   ...   }
   |         - temporary value is freed at the end of this statement

Some errors have detailed explanations: E0597, E0716.
For more information about an error, try `rustc --explain E0597`.
error: could not compile `uci` (lib) due to 2 previous errors
